--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -207,3 +207,20 @@ body{
 							"tarjeta8 tarjeta8 tarjeta8 tarjeta8";
 	}
 }
+
+.encabezado{
+	animation-name: animLogo;
+	animation-duration: 1.3s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+}
+
+@keyframes animLogo{
+	from{
+		color: #fff;
+	}
+
+	to{
+		color: #000;
+	}
+}
